📝 Add docstrings to `issues/4636`
Docstrings generation was requested by @yuancu.

* https://github.com/opensearch-project/sql/pull/4892#issuecomment-3685463615

The following files were modified:

* `core/src/main/java/org/opensearch/sql/calcite/CalcitePlanContext.java`
* `core/src/main/java/org/opensearch/sql/calcite/CalciteRelNodeVisitor.java`
* `core/src/main/java/org/opensearch/sql/calcite/CalciteRexNodeVisitor.java`
* `core/src/main/java/org/opensearch/sql/calcite/ExtendedRexBuilder.java`
* `core/src/main/java/org/opensearch/sql/calcite/utils/CalciteToolsHelper.java`
* `core/src/main/java/org/opensearch/sql/calcite/utils/OpenSearchTypeFactory.java`
* `core/src/main/java/org/opensearch/sql/calcite/utils/OpenSearchTypeUtil.java`
* `core/src/main/java/org/opensearch/sql/calcite/utils/binning/BinnableField.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/OpenSearchSparkSqlDialect.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/PplConvertletTable.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/PplTypeCoercion.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/PplTypeCoercionRule.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/PplValidator.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/SqlOperatorTableProvider.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/ValidationUtils.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/converters/PplRelToSqlNodeConverter.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/converters/PplSqlToRelConverter.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/shuttles/PplRelToSqlRelShuttle.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/shuttles/SkipRelValidationShuttle.java`
* `core/src/main/java/org/opensearch/sql/calcite/validate/shuttles/SqlRewriteShuttle.java`
* `core/src/main/java/org/opensearch/sql/executor/QueryService.java`
* `core/src/main/java/org/opensearch/sql/e